finished my mental health prototype website

--- a/logIn.html
+++ b/logIn.html
@@ -20,10 +20,10 @@
         </div>
         <div class="links">
             <a id="home" href="index.html">Home</a>
-            <a id="logIn" href="">Log In</a>
-            <a id="inbox" href="">Inbox</a>
-            <a id="forum" href="">Forum</a>
-            <a id="following" href="">Following</a>
+            <a id="logIn" href="logIn.html">Log In</a>
+            <a id="inbox" href="inbox.html">Inbox</a>
+            <a id="forum" href="forum.html">Forum</a>
+            <a id="following" href="following.html">Following</a>
         </div>
     </div>
     <div class="header">
